<resources>
    <string name="app_name">product_searcher</string>
    <string name="site_selector_label_text">1. Please, select where you want to find a product</string>
    <string name="search_input_label_text">2. Please, type below the product you want to find</string>
    <string name="search_product_text">Search Product</string>
    <string name="internet_error_text">Ups! Seems something went wrong.\nPlease check your internet connection and try again</string>
    <string name="search_no_results_text">There are no results for this search</string>
    <string name="no_site_selected_error">You must select a site!</string>
    <string name="empty_query_error">You must type a product for search!</string>
    <string name="text_id_placeholder">Id: %s</string>
    <string name="product_not_found_text">Product not found.\nPlease try again</string>
    <string name="condition_text">Condition:</string>
    <string name="price_text">Price:</string>
    <string name="price_placeholder">%s %s</string>
</resources>